# konqlets-svn

./: AUTHORS  ChangeLog  README  TODO  configure.in.in  konqlets.kdevelop  konqlets.kdevelop.pcs  konqlets.kdevses
admin/: am_edit
doc/: Makefile.am  bookmarklets-moz.html
doc/en/: Makefile.am  index.docbook
src/: Makefile.am
src/kioslave/: Makefile.am  javascript.cpp  javascript.h  javascript.lsm  javascript.protocol
src/plugin/: Makefile.am  konqletsplugin.cpp  konqletsplugin.desktop  konqletsplugin.h  konqletsplugin.rc
templates/: cpp
